assets/css/styles.css
@import url("reset.css");


:root {
    --background-gradient: linear-gradient(90deg, rgba(14,165,233,1) 0%, rgba(99,102,241,1) 100%);
    --font-color: rgb(20, 20, 20);
}

* {
    color:var(--font-color);
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body {
    /* Background animation */
    background: var(--background-gradient);
    background: linear-gradient(-45deg, rgba(14,165,233,1), rgba(99,102,241,1), rgba(14,165,233,1));
    background-size: 400% 400%;
    animation: gradient 20s ease infinite;
}

main {
    min-height: 99vh;

    padding:1rem;

    display: flex;
    align-items: center;
    justify-content: center;
    flex-wrap: wrap;
    gap:clamp(1rem, 5vw, 3rem);
}

h1 {
    font-size: clamp(1.75rem, 2vw, 2.5rem);
    margin-block:clamp(0.25rem, 2vw, 1.25rem);
}

h2 {
    font-size: clamp(1.25rem, 2vw, 1.5rem);
    margin-block:clamp(0.125rem, 1vw, 1rem);
}


img {
    width:20rem;
    border-radius: 50%;
}

#profile-text {
    display: flex;
    flex-direction: column;
}

#icon-container {
    margin:1rem 0rem;

    display: flex;
    justify-content: center;
    gap:1.5rem;  
}

.icon {
    font-size:2rem;
    display:inline-block;
    transition: 0.3s;
}

.icon:hover {
    cursor: pointer;
    transition: 0.3s;
    transform: scale(1.05);
}

/* Background gradient animation */
@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

